Corrected mobile mode alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1207,7 +1207,7 @@ strong,
 	border-left: 4px solid currentColor;
 	padding-left: 10px;
 	margin-left: 6px;
-	max-width: 180px;
+	max-width: 306px;
 }
 
 .page .content .subhead{
